--- a/template/package.json
+++ b/template/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "{{ name }}",
+  "name": "template",
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
@@ -29,7 +29,7 @@
     "express": "^4.17.1",
     "if-env": "^1.0.0",
     "ignore-styles": "^5.0.1",
-    "preact-cli": "^3.0.0-rc.6",
+    "preact-cli": "^3.0.0-rc.9",
     "sirv-cli": "^0.4.5"
   },
   "dependencies": {
